force-app/main/default/objects/Impact_Assessment__c/Impact_Assessment__c.object-meta.xml
<CustomObject>
    <label>Impact Assessment</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Impact Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>