force-app/main/default/objects/Impact_Assessment__c/fields/Match_Count__c.field-meta.xml
<CustomField>
    <fullName>Match_Count__c</fullName>
    <label>Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>