force-app/main/default/objects/Impact_Assessment__c/fields/Query_Text__c.field-meta.xml
<CustomField>
    <fullName>Query_Text__c</fullName>
    <label>Query Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>