force-app/main/default/objects/Impact_Assessment__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FieldUsage</fullName>
            </value>
            <value>
                <fullName>ObjectUsage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>